Change java version